[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'Bobs_Testpackage'
version = "0.0.3"
authors = [{ name="Ben Su", email="benisinyourwalls12@gmail.com" }]
description = "A small example package for testing out PyPI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Source code = "https://github.com/LeCodeChef/Bobs-Test-Package"

[tool.hatch.build.targets.wheel]
packages = ["src/Bobs_Testpackage"]